mejora estilos, edición y eliminación en vista de actividad